--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,7 @@
     "type": "library",
     "autoload": {
         "psr-4": {
+            "App\\Controllers\\": "app/Controllers/",
             "App\\Models\\": "app/Models/",
             "App\\Core\\": "app/Core/"
         }
